<resources>
    <string name="app_name">To Do</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="add_to_today">Add to Today</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="low_priority">Low Priority</string>
    <string name="high_priority">High Priority</string>
    <string name="created_date_asc">Created Date Asc</string>
    <string name="created_date_desc">Created Date Desc</string>
    <string name="add">ADD</string>
    <string name="save">SAVE</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="my_task">My Task</string>
    <string name="today">Today</string>
    <string name="planned">Planned</string>
    <string name="done">Done</string>
    <string name="all">All</string>
    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
    <string-array name="due_date">
        <item>Due Today</item>
        <item>Due Tomorrow</item>
        <item>Scheduled</item>
    </string-array>
</resources>