<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:iconTint="@color/colorWhite"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sortBy"
        android:title="@string/sort_by">
        <menu>
            <item
                android:id="@+id/menu_priority_high"
                android:title="@string/high_priority" />
            <item
                android:id="@+id/menu_priority_low"
                android:title="@string/low_priority" />
            <item
                android:id="@+id/menu_created_date_asc"
                android:title="@string/created_date_asc" />
            <item
                android:id="@+id/menu_created_date_desc"
                android:title="@string/created_date_desc" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />
</menu>