<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ListFragment">

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/today"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/today"
            android:textSize="18sp"
            android:background="@drawable/custom_input" />

        <TextView
            android:id="@+id/planned"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/planned"
            android:textSize="18sp"
            android:background="@drawable/custom_input" />

        <TextView
            android:id="@+id/done"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/done"
            android:textSize="18sp"
            android:background="@drawable/custom_input" />

        <TextView
            android:id="@+id/all"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/all"
            android:textSize="18sp"
            android:background="@drawable/custom_input" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navBar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_24"
        android:tint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>